--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: white;
 }
 
 body {
   background-color: #141414;
   min-height: 100vh;
+}
+
+.react-jinke-music-player-main .music-player-panel .panel-content .rc-slider-handle,
+.react-jinke-music-player-main .music-player-panel .panel-content .rc-slider-track {
+  background-color: #E9003F !important;
 }
