--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 body{
-    background-color: rgb(6, 5, 5) !important;
     font-family: 'Roboto', sans-serif;
-
 }
 
 ::placeholder {
@@ -333,13 +331,12 @@ font-size: 0.8em;
 }
 
 //NftInformation
-.mint_section{
-  padding-top: 3em;
-}
+// .mint_section{
+//   padding-top: 3em;
+// }
 
 .rowx{
   display: table;
-
 }
 
 input[type=text], select {
@@ -352,7 +349,7 @@ input[type=text], select {
   background-color: black !important;
 }
 .mint_section{
-  background-color: #060909;
+  background-color: #141414 !important;
 }
 .nft_Information header{
   font-size: 1.4em;
