--- a/src/style.css
+++ b/src/style.css
@@ -355,14 +355,10 @@ input[type=text], select {
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid rgba(204, 204, 204, 0);
-  border-radius: 4px;
+  border: 1px solid #0E0E0E;
+  border-radius: 8px;
   box-sizing: border-box;
-  background-color: black !important;
-}
-
-.mint_section {
-  background-color: #060909;
+  background-color: #111111 !important;
 }
 
 .nft_Information header {
@@ -392,7 +388,9 @@ select {
 
 textarea {
   width: 100%;
-  background-color: black !important;
+  background-color: #111111 !important;
+  border: 1px solid #0E0E0E;
+  border-radius: 8px;
   padding: 12px 20px;
   margin: 8px 0;
 }
