--- a/src/style.css
+++ b/src/style.css
@@ -211,9 +211,7 @@ textarea::selection {
 }
 
 .navbar {
-  background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 100%);
-  height: 80px;
-  padding: 3em 0;
+  padding: 2em 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -318,8 +316,9 @@ textarea::selection {
     transform: translate(25%, 50%);
   }
   .menu-icon {
-    display: block;
+    display: flex;
     position: absolute;
+    gap: 1rem;
     top: 0;
     right: 0;
     transform: translate(-100%, 60%);
