--- a/src/style.scss
+++ b/src/style.scss
@@ -380,6 +380,9 @@ input[type=text], select {
   font-size: 1.4em;
   padding-bottom: 1em;
 }
+.nft_Information input{
+  margin: auto 1em 0 0;
+}
 
 .col50{
   width: 50%;
