--- a/src/style.css
+++ b/src/style.css
@@ -408,6 +408,10 @@ input[type=text], select {
   padding-bottom: 1em;
 }
 
+.nft_Information input {
+  margin: auto 1em 0 0;
+}
+
 .col50 {
   width: 50%;
   float: left;
