--- a/src/style.css
+++ b/src/style.css
@@ -5,19 +5,19 @@ body {
 }
 
 ::-moz-placeholder {
-  color: white !important;
+  color: #707070 !important;
 }
 
 :-ms-input-placeholder {
-  color: white !important;
+  color: #707070 !important;
 }
 
 ::placeholder {
-  color: white !important;
+  color: #707070 !important;
 }
 
 input::-moz-selection {
-  color: rgb(255, 255, 255) !important;
+  color: #707070 !important;
   border: solid #E9003F !important;
   border-width: 0 0 3px 0 !important;
   padding-bottom: 2px;
@@ -28,7 +28,7 @@ input:focus,
 input:hover,
 input:active,
 input::selection {
-  color: rgb(255, 255, 255) !important;
+  color: #707070 !important;
   border: solid #E9003F !important;
   border-width: 0 0 3px 0 !important;
   padding-bottom: 2px;
@@ -36,7 +36,7 @@ input::selection {
 }
 
 textarea::-moz-selection {
-  color: rgb(255, 255, 255) !important;
+  color: #707070 !important;
   border: solid #E9003F !important;
   border-width: 0 0 3px 0 !important;
   padding-bottom: 2px;
@@ -212,8 +212,7 @@ textarea::selection {
 
 .navbar {
   background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 100%);
-  height: 80px;
-  padding: 3em 0;
+  padding: 1rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -315,20 +314,20 @@ textarea::selection {
     position: absolute;
     top: 0;
     left: 0;
-    transform: translate(25%, 50%);
+    transform: translate(0%, 50%);
   }
   .menu-icon {
-    display: block;
+    display: flex;
     position: absolute;
     top: 0;
     right: 0;
-    transform: translate(-100%, 60%);
-    font-size: 1.8rem;
+    transform: translate(-20%, 50%);
+    font-size: 1rem;
     cursor: pointer;
   }
   .fa-times {
     color: #fff;
-    font-size: 2rem;
+    font-size: 1rem;
   }
   .nav-links-mobile {
     display: block;
@@ -388,20 +387,16 @@ textarea::selection {
   display: table;
 }
 
-input[type=text], select {
-  color: rgb(255, 255, 255);
-  padding: 12px 20px;
+input, select, textarea {
+  color: #707070;
+  padding: 12px;
   margin: 8px 0;
-  display: inline-block;
-  border: 1px solid rgba(204, 204, 204, 0);
-  border-radius: 4px;
+  border: 1px solid #161616;
+  border-radius: 5px;
   box-sizing: border-box;
-  background-color: black !important;
+  background-color: #0e0e0e !important;
 }
 
-.mint_section {
-  background-color: #141414 !important;
-}
 
 .nft_Information header {
   font-size: 1.4em;
@@ -427,20 +422,16 @@ form .col40 {
   margin-right: 1em;
 }
 
-select {
-  padding: 12px 20px;
-  margin: 8px 2em 0 0;
-}
-
 textarea {
   width: 100%;
-  background-color: black !important;
-  padding: 12px 20px;
+  background-color: #0e0e0e !important;
+  padding: 12px;
+  border: 1px solid #161616;
   margin: 8px 0;
+  color: #707070 !important;
 }
 
 input[type=text]:focus {
-  color: rgb(255, 255, 255);
   border: 1px solid rgb(142, 34, 34);
 }
 
