--- a/src/style.css
+++ b/src/style.css
@@ -5,29 +5,56 @@ body {
 }
 
 ::-moz-placeholder {
-  color: #707070 !important;
+  color: white !important;
 }
 
 :-ms-input-placeholder {
-  color: #707070 !important;
+  color: white !important;
 }
 
 ::placeholder {
-  color: #707070 !important;
+  color: white !important;
+}
+
+video {
+  padding: 1em;
+}
+
+input::-moz-selection {
+  color: rgb(255, 255, 255) !important;
+  border: solid #E9003F !important;
+  border-width: 0 0 3px 0 !important;
+  padding-bottom: 2px;
+  outline: none;
+}
+
+input:focus,
+input:hover,
+input:active,
+input::selection {
+  color: rgb(255, 255, 255) !important;
+  border: solid #E9003F !important;
+  border-width: 0 0 3px 0 !important;
+  padding-bottom: 2px;
+  outline: none;
 }
 
 textarea::-moz-selection {
-  color: #707070 !important;
-    border-bottom: 1px solid #E9003F !important;
-    outline: none;
+  color: rgb(255, 255, 255) !important;
+  border: solid #E9003F !important;
+  border-width: 0 0 3px 0 !important;
+  padding-bottom: 2px;
+  outline: none;
 }
 
 textarea:focus,
 textarea:hover,
 textarea:active,
 textarea::selection {
-color: #707070 !important;
-  border-bottom: 1px solid #E9003F !important;
+  color: rgb(255, 255, 255) !important;
+  border: solid #E9003F !important;
+  border-width: 0 0 3px 0 !important;
+  padding-bottom: 2px;
   outline: none;
 }
 
@@ -189,7 +216,8 @@ color: #707070 !important;
 
 .navbar {
   background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 100%);
-  padding: 1rem 0;
+  height: 80px;
+  padding: 3em 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -291,20 +319,20 @@ color: #707070 !important;
     position: absolute;
     top: 0;
     left: 0;
-    transform: translate(0%, 50%);
+    transform: translate(25%, 50%);
   }
   .menu-icon {
-    display: flex;
+    display: block;
     position: absolute;
     top: 0;
     right: 0;
-    transform: translate(-20%, 50%);
-    font-size: 1rem;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
     cursor: pointer;
   }
   .fa-times {
     color: #fff;
-    font-size: 1rem;
+    font-size: 2rem;
   }
   .nav-links-mobile {
     display: block;
@@ -364,16 +392,20 @@ color: #707070 !important;
   display: table;
 }
 
-input, select, textarea {
-  color: #707070;
-  padding: 12px;
+input[type=text], select {
+  color: rgb(255, 255, 255);
+  padding: 12px 20px;
   margin: 8px 0;
-  border: 1px solid #161616;
-  border-radius: 5px;
+  display: inline-block;
+  border: 1px solid rgba(204, 204, 204, 0);
+  border-radius: 4px;
   box-sizing: border-box;
-  background-color: #0e0e0e !important;
+  background-color: black !important;
 }
 
+.mint_section {
+  background-color: #141414 !important;
+}
 
 .nft_Information header {
   font-size: 1.4em;
@@ -399,22 +431,21 @@ form .col40 {
   margin-right: 1em;
 }
 
-textarea {
-  width: 100%;
-  background-color: #0e0e0e !important;
-  padding: 12px;
-  border: 1px solid #161616;
-  margin: 8px 0;
-  color: #707070 !important;
+select {
+  padding: 12px 20px;
+  margin: 8px 2em 0 0;
 }
 
-input[type=text]:focus,
-input[type=text]:hover,
-input[type=text]:active,
-input[type=text]::selection {
-  color: #707070 !important;
-  border-bottom: 1px solid #E9003F !important;
-  outline: none;
+textarea {
+  width: 100%;
+  background-color: black !important;
+  padding: 12px 20px;
+  margin: 8px 0;
+}
+
+input[type=text]:focus {
+  color: rgb(255, 255, 255);
+  border: 1px solid rgb(142, 34, 34);
 }
 
 .submit_nft_btn {
